Build a simple chat window between walker and owner under walker-map.jsx and watcher-map.jsx reference https://medium.com/@noufel.gouirhate/build-a-simple-chat-app-with-node-js-and-socket-io-ea716c093088 tested and work UI design choose chat bubble css https://leaverou.github.io/bubbly/ choose black and white theme add time under bubble chat box put  a chat icon to the home page,<i class='fas fa-comment-dots'></i> when user clicks the icion, havigate to router /chat-room, load the chat page re-layout all the button in home page to a hexgon shape add a back button , back to home page when clicked fix display issue - reverse the chat content array, use display flex and flex-column-reverse trick to display the newest chat content, overflow hidden the old ones fix key warning on the chat list div display name, hardcorded for now add another button in one of the hoxgen button group, called live-walk

--- a/client/css/home-page.css
+++ b/client/css/home-page.css
@@ -27,13 +27,15 @@
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    transition: .5s ease;
+    transition: all .5s ease;
 }
 
 .secondary-button.hide{
     opacity: 0;
     z-index: -1;
 }
+
+
 
 .secondary-button.open{
     opacity: 1;
@@ -51,14 +53,27 @@
 }
 
 .user-requests.open {
-    left: 50%;
+    left: 35%;
     top:30%;
 }
 
 .live-watch.open{
-    left: 50%;
-    top:70%;
+    left: 35%;
+    top: 70%;
 }
+
+
+.chat.open{
+    left: 65%;
+    top: 30%;
+}
+
+.live-walk.open{
+    left: 65%;
+    top: 70%;   
+}
+
+
 
 .button-text {
     display: block;
